--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Hacker-Blog
-description: "A Jekyll Blog Theme For Hackers"
+title: Neo's NVM
+description: "Neo's Non-Volatile Memory space"
 author:
-  name: "SomeHacker"
-  email: "someone@somewebsite.somedomain"
-  url: "https://ashishchaudhary.in/hacker-blog"
+  name: "Sungjun Park"
+  email: "sungjun@photogrammer.me"
+  url: "https://neo-nvm.github.io"
 
 baseurl: /
 
@@ -28,5 +28,5 @@ plugins:
   - jekyll-sitemap
 
 # Custom variables
-owner : "SomeHacker"
-year : "2020"
+owner : "Neo"
+year : "2025"
